# GASMIC

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  manual.html  test.asm  test2.asm
src/: ansistyle.h  arithmetic.c  arithmetic.h  as.c  as.h  console.c  console.h  elf.h  fixedint.h  formats.h  getopt.c  getopt.h  lang.c  lang.h  main.c  noreturn.h  pseudo.c  pseudo.h  smem.c  smem.h  targets.h  util.c  util.h
src/formats/: bin.h
src/targets/: target.h
src/targets/6x09/: arch.c  arch.h
src/targets/z80/: arch.c  arch.h
test/: compat.asm  hello.asm  include1.asm  include2.asm  include3.asm  test0.asm  test1.asm  test1.s
